--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,6 @@
+@import "./chapters/chapter1/chapter1.scss";
+@import "./chapters/chapter1/chapter1page2.scss";
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +8,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
 
 code {
