--- a/src/index.scss
+++ b/src/index.scss
@@ -10,6 +10,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
   overflow-y: hidden;
+  background-color: #282928;
 }
 
 code {
