--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,8 @@
 @import "./chapters/chapter1/chapter1page2.scss";
 
 body {
+  position: relative;
+  min-height: 100vh;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,7 +12,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
   overflow-y: hidden;
-  background-color: #282928;
+  color: #ECECE9; 
 }
 
 code {
