--- a/src/index.scss
+++ b/src/index.scss
@@ -11,6 +11,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: #ECECE9; 
+  background-color: #282928;
 }
 
 code {
