--- a/src/index.scss
+++ b/src/index.scss
@@ -1,20 +1,20 @@
-@import "./chapters/chapter1/chapter1.scss";
-@import "./chapters/chapter1/chapter1page2.scss";
+@import "./scenes/chapter1/chapter1.scss";
+@import "./scenes/chapter1/chapter1page2.scss";
 
 body {
   position: relative;
   min-height: 100vh;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: #ECECE9; 
+  color: #ecece9;
   background-color: #282928;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
