[CSS] create and import css

--- a/src/index.scss
+++ b/src/index.scss
@@ -24,6 +24,7 @@
 
 @import "./scenes/chapter1/chapter1.scss";
 @import "./scenes/chapter1/chapter1page2.scss";
+@import "./scenes/chapter3/c3p2/c3p2.scss";
 
 body {
   position: relative;
