[CSS] create and import css

--- a/src/index.scss
+++ b/src/index.scss
@@ -25,6 +25,7 @@
 @import "./scenes/chapter1/chapter1.scss";
 @import "./scenes/chapter1/chapter1page2.scss";
 @import "./scenes/chapter3/c3p2/c3p2.scss";
+@import "./scenes/chapter3/c3p3/c3p3.scss";
 
 body {
   position: relative;
@@ -43,6 +44,13 @@ body {
   h1 {
     font-family: 'notable' !important;
   }
+}
+
+
+.chapter-container {
+    width: 100vw;
+    height: 100vh;
+    position: relative;
 }
 
 // code {
