[CSS] adapt c3p3 anim

--- a/src/index.scss
+++ b/src/index.scss
@@ -53,6 +53,10 @@ body {
     position: relative;
 }
 
+.relative {
+  position: relative;
+}
+
 // code {
 //   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
 //     monospace;
