[STYLE] clean style

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,7 @@
-/***** FONTS *****/
-@import './fonts/primary_font.scss';
-@import './fonts/secondary_font.scss';
-
 /***** VENDORS *****/
 @import './vendors/vendors.scss';
+
+@import "../scenes/chapter1/chapter1.scss";
+@import "../scenes/chapter1/chapter1page2.scss";
+@import "../scenes/chapter3/c3p2/c3p2.scss";
+@import "../scenes/chapter3/c3p3/c3p3.scss";
